# CS4560_JAVA_parallelization_strategy

./: CMakeLists.txt  README.md  main.cpp
ConcurrentTest/: pom.xml
ConcurrentTest/src/main/java/nl/tudelft/: Main.java
ConcurrentTest/src/main/java/nl/tudelft/concurrent/test/: JMHDemo1.java
ConcurrentTest/src/main/java/nl/tudelft/concurrent/test/datastructure/: IntegerTest.java
ConcurrentTest/src/main/java/nl/tudelft/concurrent/test/executor/: ExecutorCPUTaskTest.java  ExecutorIOTaskTest.java  ExecutorMixTaskTest.java
ConcurrentTest/src/test/java/nl/tudelft/concurrent/: ConsistentTest.java
ParallelArrayTest/: parallel_array.java
array_test_result/: time_plot.py  warmup_10_test_10_measure_20_mapping_stat.csv  warmup_10_test_10_measure_20_propagation_stat.csv
graph/: graph_cpu.py  graph_cpu_cs.py  graph_io.py
results/executors/CPU/: 2048ThreadsParallelStatus2048Tasks.txt  256Threads2Processes128Tasks.txt  256ThreadsParallelStatus128Tasks.txt  256ThreadsParallelStatus256Tasks.txt  512ThreadsParallelStatus128Tasks.txt  512ThreadsParallelStatus512Tasks.txt  Context-switch.txt  ControlGroup.txt  Performance.txt
results/executors/IO/: Context-switch.txt  Performance.txt
results/executors/Mixed/: Performance.txt
results/jmm/: 1.asm  2.1.asm  2.2.asm  3.asm  4.asm  8.1.asm  8.2.asm  8.asm
results/threadlocal/: ThreadLocalAccessLatencyTest.txt  ThreadLocalAnalysis.txt  ThreadLocalCollisionTest.txt  ThreadLocalVSLocks.txt  ThreadLocalVSLocksContextSwitch.txt  thread-dump.txt
(+6 files in other folders)
